[gd_scene load_steps=14 format=3 uid="uid://dj7ajtxwkrgb4"]

[ext_resource type="Script" path="res://jogo_oficial/Scripts/selectionPage.gd" id="1_c3ypd"]
[ext_resource type="Texture2D" uid="uid://c3vdt3eny2hmh" path="res://jogo_oficial/Assets/Kenney-Urban-Pack/Tilemap/tilemap.png" id="1_jj2so"]
[ext_resource type="FontFile" uid="uid://y3w3pfsp0bab" path="res://jogo_oficial/Assets/at01.ttf" id="2_50wqu"]
[ext_resource type="Script" path="res://jogo_oficial/Scripts/player1.gd" id="2_nro4y"]
[ext_resource type="Texture2D" uid="uid://dyqtgf7sv4ufh" path="res://jogo_oficial/Assets/Actors/assets/tile_0024.png" id="3_3slvy"]
[ext_resource type="Texture2D" uid="uid://cht253ukq75ir" path="res://jogo_oficial/Assets/Items/select_button.png" id="4_rh0q5"]
[ext_resource type="Texture2D" uid="uid://b1j7bj8xm06v7" path="res://jogo_oficial/Assets/Actors/assets/tile_0267.png" id="4_s3pu6"]
[ext_resource type="Texture2D" uid="uid://ctlxfjqsyny05" path="res://jogo_oficial/Assets/Actors/assets/tile_0429.png" id="5_eb4me"]
[ext_resource type="Texture2D" uid="uid://t00p3i676o6" path="res://jogo_oficial/Assets/Actors/assets/tile_0105.png" id="6_7j5gf"]
[ext_resource type="Texture2D" uid="uid://diosa1n1autys" path="res://jogo_oficial/Assets/Items/select_button2.png" id="9_1vfsv"]
[ext_resource type="Script" path="res://jogo_oficial/Scripts/player2.gd" id="9_pnrym"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_2cot8"]
resource_name = "Home"
texture = ExtResource("1_jj2so")
separation = Vector2i(1, 1)
18:6/0 = 0
18:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
18:6/0/physics_layer_0/angular_velocity = 0.0
16:4/0 = 0
16:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
16:4/0/physics_layer_0/angular_velocity = 0.0
16:5/0 = 0
16:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
16:5/0/physics_layer_0/angular_velocity = 0.0
16:6/0 = 0
16:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
16:6/0/physics_layer_0/angular_velocity = 0.0
16:7/0 = 0
16:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
16:7/0/physics_layer_0/angular_velocity = 0.0
17:7/0 = 0
17:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
17:7/0/physics_layer_0/angular_velocity = 0.0
18:7/0 = 0
18:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
18:7/0/physics_layer_0/angular_velocity = 0.0
19:7/0 = 0
19:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
19:7/0/physics_layer_0/angular_velocity = 0.0
20:7/0 = 0
20:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
20:7/0/physics_layer_0/angular_velocity = 0.0
21:7/0 = 0
21:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
21:7/0/physics_layer_0/angular_velocity = 0.0
22:7/0 = 0
22:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
22:7/0/physics_layer_0/angular_velocity = 0.0
22:6/0 = 0
22:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
22:6/0/physics_layer_0/angular_velocity = 0.0
22:5/0 = 0
22:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
22:5/0/physics_layer_0/angular_velocity = 0.0
22:4/0 = 0
22:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
22:4/0/physics_layer_0/angular_velocity = 0.0
21:4/0 = 0
21:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
21:4/0/physics_layer_0/angular_velocity = 0.0
20:4/0 = 0
20:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
20:4/0/physics_layer_0/angular_velocity = 0.0
19:4/0 = 0
19:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
19:4/0/physics_layer_0/angular_velocity = 0.0
18:4/0 = 0
18:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
18:4/0/physics_layer_0/angular_velocity = 0.0
17:4/0 = 0
17:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
17:4/0/physics_layer_0/angular_velocity = 0.0
17:5/0 = 0
17:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
17:5/0/physics_layer_0/angular_velocity = 0.0
17:6/0 = 0
17:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
17:6/0/physics_layer_0/angular_velocity = 0.0
19:6/0 = 0
19:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
19:6/0/physics_layer_0/angular_velocity = 0.0
20:6/0 = 0
20:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
20:6/0/physics_layer_0/angular_velocity = 0.0
21:6/0 = 0
21:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
21:6/0/physics_layer_0/angular_velocity = 0.0
21:5/0 = 0
21:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
21:5/0/physics_layer_0/angular_velocity = 0.0
20:5/0 = 0
20:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
20:5/0/physics_layer_0/angular_velocity = 0.0
19:5/0 = 0
19:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
19:5/0/physics_layer_0/angular_velocity = 0.0
18:5/0 = 0
18:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
18:5/0/physics_layer_0/angular_velocity = 0.0
15:8/0 = 0
15:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
15:8/0/physics_layer_0/angular_velocity = 0.0
15:7/0 = 0
15:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
15:7/0/physics_layer_0/angular_velocity = 0.0
15:6/0 = 0
15:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
15:6/0/physics_layer_0/angular_velocity = 0.0
14:6/0 = 0
14:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
14:6/0/physics_layer_0/angular_velocity = 0.0
13:6/0 = 0
13:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
13:6/0/physics_layer_0/angular_velocity = 0.0
12:6/0 = 0
12:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
12:6/0/physics_layer_0/angular_velocity = 0.0
11:6/0 = 0
11:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
11:6/0/physics_layer_0/angular_velocity = 0.0
10:6/0 = 0
10:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
10:6/0/physics_layer_0/angular_velocity = 0.0
9:6/0 = 0
9:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:6/0/physics_layer_0/angular_velocity = 0.0
8:6/0 = 0
8:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:6/0/physics_layer_0/angular_velocity = 0.0
8:7/0 = 0
8:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:7/0/physics_layer_0/angular_velocity = 0.0
8:8/0 = 0
8:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:8/0/physics_layer_0/angular_velocity = 0.0
9:8/0 = 0
9:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:8/0/physics_layer_0/angular_velocity = 0.0
10:8/0 = 0
10:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
10:8/0/physics_layer_0/angular_velocity = 0.0
11:8/0 = 0
11:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
11:8/0/physics_layer_0/angular_velocity = 0.0
12:8/0 = 0
12:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
12:8/0/physics_layer_0/angular_velocity = 0.0
13:8/0 = 0
13:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
13:8/0/physics_layer_0/angular_velocity = 0.0
14:8/0 = 0
14:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
14:8/0/physics_layer_0/angular_velocity = 0.0
14:7/0 = 0
14:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
14:7/0/physics_layer_0/angular_velocity = 0.0
13:7/0 = 0
13:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
13:7/0/physics_layer_0/angular_velocity = 0.0
12:7/0 = 0
12:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
12:7/0/physics_layer_0/angular_velocity = 0.0
11:7/0 = 0
11:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
11:7/0/physics_layer_0/angular_velocity = 0.0
10:7/0 = 0
10:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
10:7/0/physics_layer_0/angular_velocity = 0.0
9:7/0 = 0
9:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:7/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSet" id="TileSet_ilqjh"]
physics_layer_0/collision_layer = 1
sources/18 = SubResource("TileSetAtlasSource_2cot8")

[node name="selectionPage" type="Node2D"]
script = ExtResource("1_c3ypd")

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_ilqjh")
format = 2
layer_0/name = "Back"
layer_0/tile_data = PackedInt32Array(0, 1114130, 4, 1, 1179666, 4, 2, 1179666, 4, 3, 1179666, 4, 4, 1179666, 4, 5, 1179666, 4, 6, 1179666, 4, 7, 1179666, 4, 8, 1179666, 4, 9, 1179666, 4, 10, 1179666, 4, 11, 1179666, 4, 12, 1179666, 4, 13, 1179666, 4, 14, 1179666, 4, 15, 1179666, 4, 16, 1179666, 4, 17, 1179666, 4, 18, 1179666, 4, 19, 1245202, 4, 655379, 1245202, 7, 655360, 1114130, 7, 65536, 1114130, 6, 131072, 1114130, 6, 196608, 1114130, 6, 262144, 1114130, 6, 327680, 1114130, 6, 393216, 1114130, 6, 458752, 1114130, 6, 524288, 1114130, 6, 589824, 1114130, 6, 655361, 1179666, 7, 655362, 1179666, 7, 655363, 1179666, 7, 655364, 1179666, 7, 655365, 1179666, 7, 655366, 1179666, 7, 655367, 1179666, 7, 655368, 1179666, 7, 655369, 1179666, 7, 655370, 1179666, 7, 655371, 1179666, 7, 655372, 1179666, 7, 655373, 1179666, 7, 655374, 1179666, 7, 655375, 1179666, 7, 655376, 1179666, 7, 655377, 1179666, 7, 655378, 1179666, 7, 589843, 1245202, 6, 524307, 1245202, 6, 458771, 1245202, 6, 393235, 1245202, 6, 327699, 1245202, 6, 327698, 1179666, 6, 262162, 1179666, 6, 196626, 1179666, 6, 131090, 1179666, 6, 65555, 1245202, 6, 131091, 1245202, 6, 196627, 1245202, 6, 262163, 1245202, 6, 131089, 1179666, 6, 65552, 1179666, 6, 131088, 1179666, 6, 196624, 1179666, 6, 262160, 1179666, 6, 327696, 1179666, 6, 393232, 1179666, 6, 458768, 1179666, 6, 524304, 1179666, 6, 589840, 1179666, 6, 589841, 1179666, 6, 524305, 1179666, 6, 458769, 1179666, 6, 393233, 1179666, 6, 327697, 1179666, 6, 262161, 1179666, 6, 196625, 1179666, 6, 65553, 1179666, 6, 65554, 1179666, 6, 393234, 1179666, 6, 458770, 1179666, 6, 524306, 1179666, 6, 589842, 1179666, 6, 589839, 1179666, 6, 524303, 1179666, 6, 458767, 1179666, 6, 393231, 1179666, 6, 327695, 1179666, 6, 262159, 1179666, 6, 196623, 1179666, 6, 131087, 1179666, 6, 65551, 1179666, 6, 65550, 1179666, 6, 131086, 1179666, 6, 196622, 1179666, 6, 262158, 1179666, 6, 327694, 1179666, 6, 393230, 1179666, 6, 458766, 1179666, 6, 524302, 1179666, 6, 524301, 1179666, 6, 589837, 1179666, 6, 589838, 1179666, 6, 458765, 1179666, 6, 393229, 1179666, 6, 327693, 1179666, 6, 262157, 1179666, 6, 196621, 1179666, 6, 131085, 1179666, 6, 65549, 1179666, 6, 65548, 1179666, 6, 131084, 1179666, 6, 196620, 1179666, 6, 262156, 1179666, 6, 327692, 1179666, 6, 393228, 1179666, 6, 458764, 1179666, 6, 524300, 1179666, 6, 589836, 1179666, 6, 589835, 1179666, 6, 524299, 1179666, 6, 458763, 1179666, 6, 393227, 1179666, 6, 327691, 1179666, 6, 262155, 1179666, 6, 196619, 1179666, 6, 131083, 1179666, 6, 65547, 1179666, 6, 65546, 1179666, 6, 131082, 1179666, 6, 196618, 1179666, 6, 262154, 1179666, 6, 327690, 1179666, 6, 393226, 1179666, 6, 458762, 1179666, 6, 524298, 1179666, 6, 589834, 1179666, 6, 589833, 1179666, 6, 524297, 1179666, 6, 458761, 1179666, 6, 393225, 1179666, 6, 327689, 1179666, 6, 262153, 1179666, 6, 196617, 1179666, 6, 131081, 1179666, 6, 131080, 1179666, 6, 65544, 1179666, 6, 65545, 1179666, 6, 196616, 1179666, 6, 262152, 1179666, 6, 327688, 1179666, 6, 393224, 1179666, 6, 458760, 1179666, 6, 524296, 1179666, 6, 589832, 1179666, 6, 589831, 1179666, 6, 589830, 1179666, 6, 589829, 1179666, 6, 524293, 1179666, 6, 458757, 1179666, 6, 458758, 1179666, 6, 524294, 1179666, 6, 524295, 1179666, 6, 458759, 1179666, 6, 393222, 1179666, 6, 393221, 1179666, 6, 327685, 1179666, 6, 262150, 1179666, 6, 262151, 1179666, 6, 196615, 1179666, 6, 196614, 1179666, 6, 262149, 1179666, 6, 327686, 1179666, 6, 327687, 1179666, 6, 393223, 1179666, 6, 196613, 1179666, 6, 131077, 1179666, 6, 65541, 1179666, 6, 65542, 1179666, 6, 65543, 1179666, 6, 131079, 1179666, 6, 131078, 1179666, 6, 65540, 1179666, 6, 131076, 1179666, 6, 196612, 1179666, 6, 262148, 1179666, 6, 327684, 1179666, 6, 393220, 1179666, 6, 458756, 1179666, 6, 524292, 1179666, 6, 589828, 1179666, 6, 589827, 1179666, 6, 524291, 1179666, 6, 458755, 1179666, 6, 393219, 1179666, 6, 327683, 1179666, 6, 262147, 1179666, 6, 196611, 1179666, 6, 196610, 1179666, 6, 131074, 1179666, 6, 65538, 1179666, 6, 65537, 1179666, 6, 131073, 1179666, 6, 196609, 1179666, 6, 262145, 1179666, 6, 327681, 1179666, 6, 393217, 1179666, 6, 458753, 1179666, 6, 524289, 1179666, 6, 524290, 1179666, 6, 589826, 1179666, 6, 458754, 1179666, 6, 393218, 1179666, 6, 327682, 1179666, 6, 262146, 1179666, 6, 589825, 1179666, 6, 131075, 1179666, 6, 65539, 1179666, 6)

[node name="Player 1" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 40.0
offset_top = 64.0
offset_right = 80.0
offset_bottom = 104.0
script = ExtResource("2_nro4y")

[node name="Label" type="Label" parent="Player 1"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.2
anchor_top = -0.4
anchor_right = -0.2
anchor_bottom = -0.4
offset_right = 72.0
offset_bottom = 23.0
theme_override_fonts/font = ExtResource("2_50wqu")
theme_override_font_sizes/font_size = 21
text = "Player 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Boy 1" type="Button" parent="Player 1"]
layout_mode = 2
offset_left = -8.0
offset_top = 16.0
offset_right = 16.0
offset_bottom = 40.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_50wqu")
icon = ExtResource("3_3slvy")

[node name="TextureRect" type="TextureRect" parent="Player 1/Boy 1"]
visible = false
layout_mode = 0
offset_right = 24.0
offset_bottom = 24.0
texture = ExtResource("4_rh0q5")

[node name="Boy 2" type="Button" parent="Player 1"]
layout_mode = 2
offset_left = 40.0
offset_top = 16.0
offset_right = 64.0
offset_bottom = 40.0
icon = ExtResource("4_s3pu6")

[node name="TextureRect2" type="TextureRect" parent="Player 1/Boy 2"]
visible = false
layout_mode = 0
offset_right = 24.0
offset_bottom = 24.0
texture = ExtResource("4_rh0q5")

[node name="Girl 1" type="Button" parent="Player 1"]
layout_mode = 2
offset_left = -8.0
offset_top = 56.0
offset_right = 16.0
offset_bottom = 80.0
icon = ExtResource("5_eb4me")

[node name="TextureRect3" type="TextureRect" parent="Player 1/Girl 1"]
visible = false
layout_mode = 0
offset_right = 24.0
offset_bottom = 24.0
texture = ExtResource("4_rh0q5")

[node name="Girl 2" type="Button" parent="Player 1"]
layout_mode = 2
offset_left = 40.0
offset_top = 56.0
offset_right = 64.0
offset_bottom = 80.0
icon = ExtResource("6_7j5gf")

[node name="TextureRect4" type="TextureRect" parent="Player 1/Girl 2"]
visible = false
layout_mode = 0
offset_right = 24.0
offset_bottom = 24.0
texture = ExtResource("4_rh0q5")

[node name="Label2" type="Label" parent="Player 1"]
offset_left = -8.0
offset_top = 32.0
offset_right = 16.0
offset_bottom = 56.0
theme_override_fonts/font = ExtResource("2_50wqu")
theme_override_font_sizes/font_size = 14
text = "Q"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label3" type="Label" parent="Player 1"]
offset_left = 40.0
offset_top = 32.0
offset_right = 64.0
offset_bottom = 56.0
theme_override_fonts/font = ExtResource("2_50wqu")
theme_override_font_sizes/font_size = 14
text = "W"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label4" type="Label" parent="Player 1"]
offset_left = -8.0
offset_top = 72.0
offset_right = 16.0
offset_bottom = 96.0
theme_override_fonts/font = ExtResource("2_50wqu")
theme_override_font_sizes/font_size = 14
text = "A"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label5" type="Label" parent="Player 1"]
offset_left = 40.0
offset_top = 72.0
offset_right = 64.0
offset_bottom = 96.0
theme_override_fonts/font = ExtResource("2_50wqu")
theme_override_font_sizes/font_size = 14
text = "S"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Player 2" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 224.0
offset_top = 64.0
offset_right = 264.0
offset_bottom = 104.0
script = ExtResource("9_pnrym")

[node name="Label" type="Label" parent="Player 2"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.2
anchor_top = -0.4
anchor_right = -0.2
anchor_bottom = -0.4
offset_right = 72.0
offset_bottom = 23.0
theme_override_fonts/font = ExtResource("2_50wqu")
theme_override_font_sizes/font_size = 21
text = "Player 2"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Boy 1" type="Button" parent="Player 2"]
layout_mode = 2
offset_left = -8.0
offset_top = 16.0
offset_right = 16.0
offset_bottom = 40.0
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 1)
icon = ExtResource("3_3slvy")

[node name="TextureRect" type="TextureRect" parent="Player 2/Boy 1"]
visible = false
layout_mode = 0
offset_right = 24.0
offset_bottom = 24.0
texture = ExtResource("9_1vfsv")

[node name="Boy 2" type="Button" parent="Player 2"]
layout_mode = 2
offset_left = 40.0
offset_top = 16.0
offset_right = 64.0
offset_bottom = 40.0
icon = ExtResource("4_s3pu6")

[node name="TextureRect2" type="TextureRect" parent="Player 2/Boy 2"]
visible = false
layout_mode = 0
offset_right = 24.0
offset_bottom = 24.0
texture = ExtResource("9_1vfsv")

[node name="Girl 1" type="Button" parent="Player 2"]
layout_mode = 2
offset_left = -8.0
offset_top = 56.0
offset_right = 16.0
offset_bottom = 80.0
icon = ExtResource("5_eb4me")

[node name="TextureRect3" type="TextureRect" parent="Player 2/Girl 1"]
visible = false
layout_mode = 0
offset_right = 24.0
offset_bottom = 24.0
texture = ExtResource("9_1vfsv")

[node name="Girl 2" type="Button" parent="Player 2"]
layout_mode = 2
offset_left = 40.0
offset_top = 56.0
offset_right = 64.0
offset_bottom = 80.0
icon = ExtResource("6_7j5gf")

[node name="TextureRect4" type="TextureRect" parent="Player 2/Girl 2"]
visible = false
layout_mode = 0
offset_right = 24.0
offset_bottom = 24.0
texture = ExtResource("9_1vfsv")

[node name="Label6" type="Label" parent="Player 2"]
offset_left = -8.0
offset_top = 34.0
offset_right = 16.0
offset_bottom = 56.0
theme_override_fonts/font = ExtResource("2_50wqu")
theme_override_font_sizes/font_size = 14
text = "I"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label7" type="Label" parent="Player 2"]
offset_left = 40.0
offset_top = 32.0
offset_right = 64.0
offset_bottom = 56.0
theme_override_fonts/font = ExtResource("2_50wqu")
theme_override_font_sizes/font_size = 14
text = "O"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label8" type="Label" parent="Player 2"]
offset_left = -8.0
offset_top = 72.0
offset_right = 16.0
offset_bottom = 96.0
theme_override_fonts/font = ExtResource("2_50wqu")
theme_override_font_sizes/font_size = 14
text = "K"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label9" type="Label" parent="Player 2"]
offset_left = 40.0
offset_top = 73.0
offset_right = 64.0
offset_bottom = 96.0
theme_override_fonts/font = ExtResource("2_50wqu")
theme_override_font_sizes/font_size = 14
text = "L"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label" type="Label" parent="."]
offset_left = 80.0
offset_top = 16.0
offset_right = 248.0
offset_bottom = 56.0
theme_override_fonts/font = ExtResource("2_50wqu")
theme_override_font_sizes/font_size = 20
text = "Escolham seus personagens
(Para confimar aperte Enter)"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="p1_ready" from="Player 1" to="." method="_on_p_1_ready"]
[connection signal="pressed" from="Player 1/Boy 1" to="Player 1" method="_on_boy_1_pressed"]
[connection signal="pressed" from="Player 1/Boy 2" to="Player 1" method="_on_boy_2_pressed"]
[connection signal="pressed" from="Player 1/Girl 1" to="Player 1" method="_on_girl_1_pressed"]
[connection signal="pressed" from="Player 1/Girl 2" to="Player 1" method="_on_girl_2_pressed"]
[connection signal="p2_ready" from="Player 2" to="." method="_on_p_2_ready"]
[connection signal="pressed" from="Player 2/Boy 1" to="Player 2" method="_on_boy_1_pressed"]
[connection signal="pressed" from="Player 2/Boy 2" to="Player 2" method="_on_boy_2_pressed"]
[connection signal="pressed" from="Player 2/Girl 1" to="Player 2" method="_on_girl_1_pressed"]
[connection signal="pressed" from="Player 2/Girl 2" to="Player 2" method="_on_girl_2_pressed"]
